# prus

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: arrow_test.rs
src/: clickhouse_reader.rs  clickhouse_writer.rs  json_writer.rs  kafka_reader.rs  kafka_tools.rs  kafka_writer.rs  lib.rs  starrocks.rs  starrocks_reader.rs  starrocks_writer.rs
src/faker/: binary.rs  complex.rs  date.rs  expr.pest  expr.rs  internet.rs  mod.rs  number.rs  string.rs  timestamp.rs
src/sketch/: hll.rs  mod.rs  tdigest.rs
