[package]
name = "prus"
version = "0.1.0"
edition = "2024"

[lib]
name = "prus"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2"}
pyo3-arrow = "0.16.0"
arrow = { version = "57.3.0"}
arrow-json = "57.3.0"
arrow-array = "57.3.0"
arrow-ipc = { version = "57.3.0", features = ["lz4"] }
arrow-schema = "57.3.0"
ureq = { version = "3.2", features = ["json", "gzip", "charset"] }
#serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.138"
base64 = "0.22"
chrono = "0.4.39"
[target.'cfg(target_os = "windows")'.dependencies]
rdkafka = { version = "0.37.0", features = ["cmake-build"]}
[target.'cfg(target_os = "linux")'.dependencies]
rdkafka = { version = "0.37.0", features = ["cmake-build", "sasl"]}